--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,8 +5,8 @@
 @tailwind utilities;
 
 :root,
-#root, 
-#docs-root{
+#root,
+#docs-root {
   --color1: #590209;
   --color3: #FFF4EA;
   --white: #ffffff;
@@ -44,7 +44,6 @@ body {
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .background {
@@ -54,32 +53,91 @@ body {
   background-size: cover;
 }
 
-@media (min-width: 768px) {
-  .background {
-    background-position: left;
-  }
-}
 
-@media (max-width: 767px) {
-  .background {
-    background-position: right;
-  }
-}
-.bord{
+.bord {
   border: 1px solid var(--color1);
 }
 
-.bg-left {
- 
-}
-.input{
+
+.input {
   font-size: 12px;
 }
-.input::placeholder{
-  font-size: 12px;
+
+.input::placeholder {
+  font-size: 11px;
   color: var(--color1);
 }
-.input:focus{
+
+.input2 {
+  font-size: 13px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.input2::placeholder {
+  font-size: 13px;
+  color: var(--color1);
+}
+
+
+.input:focus {
   outline: none;
   background-color: white;
+}
+
+.inputVer{
+  width: 75px;
+  height: 70px;
+  text-align: center;
+  font-size: 3rem;
+}
+
+.inputVer:focus{
+  background-color: var(--color1);
+  color: white;
+  
+}
+
+.center{
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  text-align: end;
+  width: fit-content;
+}
+
+@media (min-width: 280px) and (max-width: 420px){
+  .background {
+    background-position: right;
+  }
+  .inputVer{
+    width: 45px;
+    height: 50px;
+
+  }
+  .outer-container {
+    background: none;
+  }
+  .inner-container {
+   background-position: center;
+  }
+  
+}
+
+@media (min-width: 420px) and (max-width: 768px) {
+  .background {
+    background-position: right;
+  }
+  .inputVer{
+    width: 65px;
+    height: 60px;
+
+  }
+  .outer-container {
+    background: none;
+  }
+  .inner-container {
+   background-position: center;
+  }
+  
 }
