--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -106,6 +106,14 @@ body {
   width: fit-content;
 }
 
+.responsive-div {
+  width: 100%;
+  height: 220vh;
+}
+
+
+
+
 @media (min-width: 280px) and (max-width: 420px){
   .background {
     background-position: right;
@@ -141,4 +149,70 @@ body {
    background-position: center;
   }
   
+}
+select {
+  /* appearance: none; */
+  /* background-color: #ffffff; */
+  padding: 0.75rem; /* Increased padding */
+  font-size: 1rem;
+  border-radius: 0.375rem; /* rounded-lg */
+  border: 2px solid var(--color1);
+  cursor: pointer;
+  /* color: #808080; Default color set to gray */
+  transition: all 0.3s ease;
+}
+
+
+
+option {
+  padding: 0.75rem; /* Increased padding */
+  background-color: #ffffff;
+  color: var(--color1);
+  transition: background-color 0.2s ease, color 0.2s ease;
+}
+
+option:hover {
+  background-color: var(--color1) !important;
+  color: #ffffff;
+  
+}
+
+
+.hover{
+  background-color: var(--color);
+  color: rgb(69, 63, 63) !important;
+  padding: 0.3rem;
+  text-align: start;
+  margin-top: 0.5rem;
+  cursor: pointer;
+  border-radius: 7px;
+  padding-left: 0.3rem;
+}
+.hover:hover{
+  background-color: rgb(71, 70, 70);
+  color: white !important;
+  /* padding: 1rem; */
+}
+
+.dropdown-container {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+.dropdown-container.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 1;
+    transform: translateY(0); 
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-20px); 
+  }
 }
